--- a/assets/css/sutairu.css
+++ b/assets/css/sutairu.css
@@ -1,14 +1,14 @@
-body{
+body {
     font-family: 'Poppins', sans-serif;
 
 }
 
-.t1{
+x .t1 {
     overflow: hidden;
     min-height: 100vh;
 }
 
-.liquid-t1{
+.liquid-t1 {
     position: absolute;
     z-index: -1;
     width: 40%;
@@ -16,65 +16,66 @@ body{
     left: -10%;
 }
 
-.title-nav{
+.title-nav {
     position: absolute;
     margin-left: 3%;
     margin-top: 3%;
     font-weight: bolder;
 }
 
-.t1-content{
+.t1-content {
     margin-top: 10%;
 }
 
-.illus-t1{
+.illus-t1 {
     width: 100%;
 }
 
-.caption-t1{
+.caption-t1 {
     margin-top: 10%;
     text-align: center;
     overflow: hidden;
 }
 
-#gl-t1{
+#gl-t1 {
     left: -400px;
     opacity: 0;
 }
 
-.green-text{
+.green-text {
     color: #3dc06e;
 }
 
-.section-title{
+.section-title {
     font-family: 'Montserrat', sans-serif;
     font-size: 72px;
 }
 
-body .hero-title{
+body .hero-title {
     font-family: 'Montserrat', sans-serif;
     font-size: 84px;
     font-weight: bolder;
 }
 
-.hero-subtitle{
+.hero-subtitle {
     font-weight: bold;
     font-size: 24px;
 }
 
-.gl{
+.gl {
     background-color: #3dc06e;
     height: 3px;
     border-radius: 10px;
 }
 
-.scrl-down, .explore{
+.scrl-down,
+.explore {
     width: 5%;
     margin-left: 15%;
 }
 
-.explore{
-    margin-left: 13.75%;
+.explore {
+    margin-left: 14.5%;
     font-weight: bold;
     font-size: 20px;
 }
@@ -106,6 +107,7 @@ body .hero-title{
 .ill-bg-s3 {
     left: 0%;
 }
+
 .s1,
 .s2,
 .s3 {
@@ -121,7 +123,7 @@ body .hero-title{
 
 .content-1,
 .content-2,
-.content-3{
+.content-3 {
     margin-top: 20%;
     text-align: center;
     color: #3dc06e;
@@ -129,26 +131,33 @@ body .hero-title{
 
 .tit-1,
 .tit-2,
-.tit-3{
+.tit-3 {
     font-family: 'Montserrat', sans-serif;
     font-size: 72px;
     font-weight: bolder;
 }
 
-.content-1, .content-2, .content-3, .hrl-s4, .hrr-s4 {
+.content-1,
+.content-2,
+.content-3,
+.hrl-s4,
+.hrr-s4 {
     position: relative;
     opacity: 0;
 }
 
-.content-1, .content-3, .hrr-s4 {
+.content-1,
+.content-3,
+.hrr-s4 {
     right: -300px;
 }
 
-.content-2, .hrl-s4 {
+.content-2,
+.hrl-s4 {
     left: -300px;
 }
 
-.vg-foot{
+.vg-foot {
     background-color: #3dc06e;
     margin-top: 3%;
     font-size: 12px;
@@ -156,7 +165,7 @@ body .hero-title{
     color: #fff;
 }
 
-.clip{
+.clip {
     clip-path: polygon(0 0, 100% 0, 100% 45%, 50% 60%, 0 45%);
     background-color: #3dc06e;
     margin-top: -10%;
@@ -183,7 +192,8 @@ body .hero-title{
     background-color: #ffffff;
     box-shadow: 3px 3px rgba(0, 0, 0, 0.2);
 }
-.scrl-up{
+
+.scrl-up {
     width: 90%;
     height: 90%;
 }
